<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class RegionModel extends Model
{
    protected $table = 'region';
    protected $fillable = [
      'name'
    ];
}
 